# fastjet-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  debug.txt
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: 01_basic.rs  benchmark.rs
src/: cluster_sequence.rs  constants.rs  lib.rs  proxy_jet.rs  pseudo_jet.rs
tests/: test_pseudo_jet.rs
