[package]
name = "fastjet-rs"
version = "0.1.0"
edition = "2024"
authors = ["Jesus Fileto", "Wency Suo"]
description = "A Rust implementation of the FastJet software package for jet finding."
repository = "https://github.com/WencySuo/fastjet-rs"
license = "GPL-2.0"
readme = "README.md"
exclude = ["benches/*", "tests/*"]

[profile.profiling]
inherits = "release"
debug = "line-tables-only"

[dependencies]
log = "0.4.29"

[profile.release]
codegen-units = 1
lto = "thin"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
